# waywallen

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.CN.md  README.md  build.rs  config.toml
bridge/: .gitignore  CMakeLists.txt  waywallen-bridge.map
bridge/cmake/: waywallen-bridge-config.cmake.in
bridge/include/waywallen-bridge/: bridge.h  ipc_v1.h
bridge/scripts/: regen.sh
bridge/src/: bridge.c  ipc_v1.c
displays/layer-shell/: Cargo.toml
displays/layer-shell/src/: main.rs
plugins/: CMakeLists.txt
plugins/display-defaults/displays/: kde-plasma.toml  layer-shell.toml
plugins/image/: CMakeLists.txt
plugins/image/renderers/: waywallen-image.toml
plugins/image/sources/: image.lua
plugins/image/src/: av_image.cpp  av_image.hpp  main.cpp  vk_producer.cpp  vk_producer.hpp
plugins/mpv/: CMakeLists.txt
plugins/mpv/renderers/: waywallen-mpv.toml
plugins/mpv/src/: main.cpp
proto/: control.proto
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: ws_smoke.py
sources/: local_files.lua  wallpaper_engine.lua
src/: consumer.rs  control.rs  control_proto.rs  data_transfer.rs  dbus_iface.rs  display_endpoint.rs  display_spawner.rs  dma_buf_stream.rs  dummy_fence.rs  events.rs  lib.rs  main.rs  media_probe.rs  pipewire.rs  probe_task.rs  producer.rs  renderer_manager.rs  scheduler.rs  settings.rs  tasks.rs  viewer_endpoint.rs  vulkan_dma_buf.rs  wallpaper_type.rs  ws_server.rs
src/display_proto/: codec.rs  mod.rs
src/ipc/: mod.rs  proto.rs  uds.rs
src/model/: mod.rs  repo.rs  sync.rs
src/model/entities/: item.rs  item_tag.rs  library.rs  mod.rs  playlist.rs  playlist_item.rs  source_plugin.rs  tag.rs
src/model/migration/: m20260419_000001_init.rs  m20260425_000001_item_media_meta.rs  m20260425_000002_item_timestamps.rs  m20260425_000003_item_probed_at.rs  m20260425_000004_playlist.rs  mod.rs
src/playlist/: filter.rs  mod.rs  resolve.rs  rotator.rs  state.rs
src/plugin/: display_registry.rs  mod.rs  renderer_registry.rs  source_manager.rs  source_snapshot.rs
src/routing/: mod.rs  router.rs  table.rs
src/tray/: dbusmenu.rs  mod.rs  sni.rs
tests/: cpp_host_handshake.rs  display_handshake.rs  display_sync_fd_fanout.rs  display_sync_fd_single.rs  display_v1_handshake.rs  ipc_renderer_handshake_cpp.rs  ipc_renderer_handshake_rust.rs  ipc_renderer_lifecycle.rs  iter10_cpp_scene.rs  iter2_host_handshake.rs  iter3_renderer_manager.rs  iter4_display_endpoint.rs  iter4_viewer_endpoint.rs  iter5_waywallen_renderer.rs  iter6_display_real_renderer.rs  iter6_viewer_real_renderer.rs  iter7_dma_buf_import_roundtrip.rs  iter8_cpp_host_e2e.rs  iter8_full_pipeline.rs  iter9_producer_respawn.rs  phase3b_multi_display.rs  phase3b_sync_fd_e2e.rs  probe_real.rs  renderer_manager_lifecycle.rs  rust_renderer_handshake.rs  vulkan_test.rs
tests/common/: mod.rs
tools/wayproto-gen/: Cargo.toml
tools/wayproto-gen/src/: codegen_c.rs  codegen_rust.rs  lib.rs  main.rs  parser.rs
tools/wayproto-gen/tests/: c_compile.rs
ui/: .gitignore  CMakeLists.txt  deps.json
ui/assets/: waywallen-ui.desktop.in  waywallen-ui.metainfo.xml.in  waywallen-ui.releases.xml
ui/cmake/: FetchDeps.cmake  FetchDepsProvider.cmake  SplitMocFiles.cmake
ui/include/waywallen/register/: qml_register.hpp
ui/qml/: InfoPage.qml  RenderersPage.qml  WallpaperCard.qml  WallpaperPage.qml  Window.qml
ui/qml/component/: StatusDot.qml
ui/qml/page/: AboutPage.qml  AddLibraryPage.qml  DisplaysPage.qml  InfoPage.qml  RenderersPage.qml  SourceManagePage.qml  StatusPage.qml  WallpaperCard.qml  WallpaperPage.qml
ui/src/: action.cpp  action.cppm  app.cpp  app.cppm  backend.cpp  backend.cppm  daemon_dbus.cpp  daemon_dbus.cppm  display.cpp  display.cppm  library.cpp  library.cppm  main.cpp  mod.cppm  notify.cpp  notify.cppm  proto.cppm  qml_register.cpp  renderer.cpp  renderer.cppm
ui/src/model/: list_models.cpp  list_models.cppm  share_store.cppm  store_item.cpp  store_item.cppm
ui/src/msg/: backend_msg.cppm  store.cpp  store.cppm
ui/src/query/: display_query.cpp  display_query.cppm  health_query.cpp  health_query.cppm  library_query.cpp  library_query.cppm  mod.cppm  query.cpp  query.cppm  renderer_query.cpp  renderer_query.cppm  source_query.cpp  source_query.cppm  wallpaper_query.cpp  wallpaper_query.cppm
