[package]
name = "kwallpaper-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `pipewire` crate removed: the local module `src/pipewire.rs` is a
# tokio-channel shim and never touched the real bindings. Will be
# reintroduced if/when a real PipeWire consumer is built out.
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
vulkano = "0.34"
nix = { version = "0.29", features = ["fs", "ioctl", "socket", "uio"] }
libc = "0.2"
base64 = "0.22"
smallvec = "1.13"