[package]
name = "waywallen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# Enable the legacy-protocol iter* integration tests. They predate the
# waywallen-display-v1 rewrite and talk the old `ViewerMsg` / two-arg
# `display_endpoint::serve` API. They remain in-tree as reference
# material but are opt-in only — run with
# `cargo test --features legacy_proto_tests`.
default = []
legacy_proto_tests = []

[build-dependencies]
wayproto-gen = { path = "tools/wayproto-gen" }

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.29", features = ["fs", "ioctl", "socket", "uio"] }
libc = "0.2"
# waywallen-renderer subprocess: ash for raw Vulkan control over
# DMA-BUF export + semaphore sync_fd export.
ash = "0.38"
toml = "0.8"
glob = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

[dev-dependencies]
tempfile = "3"
