[package]
name = "waywallen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
wayproto-gen = { path = "tools/wayproto-gen" }
prost-build = "0.13"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
prost = "0.13"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.29", features = ["fs", "ioctl", "socket", "uio"] }
libc = "0.2"
# waywallen-renderer subprocess: ash for raw Vulkan control over
# DMA-BUF export + semaphore sync_fd export.
ash = "0.38"
toml = "0.8"
glob = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
